samples/_failures_safe/1761219673_82d763_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_acc871ff.c: In function ‘main’:
./samples/SAFE/__tmp_acc871ff.c:145:5: error: expected expression at end of input
  145 |     addEdge(graph, 1,
      |     ^~~~~~~
./samples/SAFE/__tmp_acc871ff.c:145:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_acc871ff.c:38:6: note: declared here
   38 | void addEdge(struct Graph* graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_acc871ff.c:145:5: error: expected declaration or statement at end of input
  145 |     addEdge(graph, 1,
      |     ^~~~~~~
